--- a/WebOptixSuccessAuth/Components/RadzenMasterDetailComponent.razor
+++ b/WebOptixSuccessAuth/Components/RadzenMasterDetailComponent.razor
@@ -32,7 +32,8 @@
                         <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomerId"  Title="Id"          Width="50px" Frozen="true" TextAlign="TextAlign.Center"/>
                         <RadzenDataGridColumn TItem="OrderCustomer" Property="Customer.Company" Title="Компания"    Width="130px" />
                         <RadzenDataGridColumn TItem="OrderCustomer" Property="Edited"           Title="Дата"        Width="90px" FormatString="{0:d}" />
-                        <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomerId"  Title="Позиций"     Width="70px" TextAlign="TextAlign.Center" >
+                        <RadzenDataGridColumn TItem="OrderCustomer" Property="OrderCustomerId"  Title="Позиций"     Width="70px" TextAlign="TextAlign.Center" 
+                            Sortable="false" Filterable="false">
                             <Template Context="detail">
                                 @detail.ItemOrders.Count()
                             </Template>
