Change style. rz-state-disabled display:none

--- a/WebOptixSuccessAuth/wwwroot/css/site.css
+++ b/WebOptixSuccessAuth/wwwroot/css/site.css
@@ -86,3 +86,7 @@ a, .btn-link {
 .rz-panel.order-vendor {
     border: #5dbf74 1px solid;
 }
+
+.rz-state-disabled.rz-paginator-element {
+    display: none;
+}
