--- a/WebApp/Pages/Customer/EditCustomerComponent.razor
+++ b/WebApp/Pages/Customer/EditCustomerComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/editcustomer/{customerId}"
+﻿@page "/editcustomer/{customerId:int}"
 
 @inject NavigationManager NavigationManager
 @inject IEditCustomerUseCase EditCustomerUseCase
