--- a/WebOptixSuccessAuth/Components/AlertMessageComponent.razor
+++ b/WebOptixSuccessAuth/Components/AlertMessageComponent.razor
@@ -1,7 +1,7 @@
 ﻿@*https://getbootstrap.com/docs/4.0/components/alerts/*@
 @using WebOptixSuccessAuth
 
-@if (!string.IsNullOrWhiteSpace(@AlertClass) && string.IsNullOrWhiteSpace(@Message))
+@if (!string.IsNullOrWhiteSpace(@AlertClass) && !string.IsNullOrWhiteSpace(@Message))
 {
     <div class="alert @AlertClass" role="alert">
         @Message
