--- a/WebOptixSuccessAuth/Shared/NavMenu.razor
+++ b/WebOptixSuccessAuth/Shared/NavMenu.razor
@@ -35,13 +35,13 @@
 
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="customers" Match="NavLinkMatch.All">
-                        <span class="oi oi-people" aria-hidden="true"></span> Клиенты
+                        <span class="oi oi-people" aria-hidden="true"></span> Покупатели
                     </NavLink>
                 </li>
 
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="order-customers">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы клиентов
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Заказы покупателей
                     </NavLink>
                 </li>
 
