Add count in title

--- a/WebOptixSuccessAuth/Pages/OrderCustomers/OrderCustomers.razor
+++ b/WebOptixSuccessAuth/Pages/OrderCustomers/OrderCustomers.razor
@@ -7,7 +7,7 @@
 @inject Plugins.DataStore.SQL.AppDbContext dbContext
 @inject NavigationManager NavigationManager
 
-<h3>Покупатели</h3>
+<h3>Покупатели (@count)</h3>
 
 <RadzenButton Text="Обновить" Click="@Reset" Style="margin-bottom: 20px;" />
 
